arrumar formatação de modal de perfil

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -130,8 +130,8 @@
             <div class="d-flex">
               <div class="col-md-5">PERFIL</div>
               <div class="col-md-7 d-flex justify-content-center flex-column">
-                <h3>NOME</h3>
-                <p>exemplo@gmail.com</p>
+                <h3 class="fw-bold">NOME</h3>
+                <p class="fw-bold">exemplo@gmail.com</p>
               </div>
             </div>
 
@@ -144,11 +144,11 @@
           </div>
 
           <div class="modal-body">
-            <ul class="list-group d-flex flex-column list-unstyled fs-4">
-              <li><a style="color: currentColor" href="#">Alterar nome de usuário</a></li>
-              <li><a style="color: currentColor" href="#">Alterar email</a></li>
-              <li><a style="color: currentColor" href="#">Alterar senha</a></li>
-              <li><a style="color: currentColor" href="#">Excluir conta</a></li>
+            <ul class="list-group d-flex flex-column list-unstyled fs-5">
+              <li><a class="text-decoration-none" style="color: currentColor" href="#">Alterar nome de usuário</a></li>
+              <li><a class="text-decoration-none" style="color: currentColor" href="#">Alterar email</a></li>
+              <li><a class="text-decoration-none" style="color: currentColor" href="#">Alterar senha</a></li>
+              <li><a class="text-decoration-none" style="color: currentColor" href="#">Excluir conta</a></li>
             </ul>
           </div>
         </div>
