--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,6 +13,50 @@
       body {
         font-family: 'Lora', system-ui !important;
       }
+
+      body {
+        font-family: 'Lora', system-ui !important;
+      }
+
+      .sombra {
+        -webkit-box-shadow: 0px 14px 22px -8px rgba(0, 0, 0, 0.41);
+        -moz-box-shadow: 0px 14px 22px -8px rgba(0, 0, 0, 0.41);
+        box-shadow: 0px 14px 22px -8px rgba(0, 0, 0, 0.41);
+      }
+
+      .icone-editar {
+        position: absolute;
+        z-index: 10;
+        bottom: -10px;
+        left: 0;
+
+        padding: 0.525rem;
+
+        border-radius: 50%;
+
+        width: 40px;
+        height: auto;
+        aspect-ratio: 1;
+
+        color: black;
+      }
+
+      .icone-editar::after {
+        content: '';
+        z-index: 0;
+
+        position: absolute;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        left: 0;
+
+        padding: 0.525rem;
+
+        background-color: rgba(34, 34, 34, 0.297);
+        filter: blur(6px);
+        border-radius: 50%;
+      }
     </style>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <!-- Latest compiled and minified CSS -->
