adicionar atributo de obrigatório para inputs

--- a/templates/login.html
+++ b/templates/login.html
@@ -40,11 +40,11 @@
                 <form action="" class="d-flex flex-column align-items-center justify-content-center">
                     <div class="mb-3">
                         <label for="email" class="form-label w-100 text-danger">Email:</label>
-                        <input class="border border-2 rounded-pill" type="email" id="email" name="email">
+                        <input required class="border border-2 rounded-pill" type="email" id="email" name="email">
                     </div>
                     <div class="mb-3">
                         <label for="senha" class="form-label w-100 text-danger">Senha:</label>
-                        <input class="border border-2 rounded-pill" type="password" id="senha" name="senha">
+                        <input required class="border border-2 rounded-pill" type="password" id="senha" name="senha">
                     </div>
                     <div class="mb-3 d-flex gap-5">
                         <button class="btn btn-danger">Cancelar</button>
