--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -42,20 +42,20 @@
                 <div class="d-flex flex-column align-items-center justify-content-center">
                     <div class="my-3 d-flex flex-column justify-content-center">
                         <label class="mx-2" for="usuario">Nome de usuário</label>
-                        <input class="border rounded-pill px-3 sombra" type="text" id="usuario" name="usuario">
+                        <input required class="border rounded-pill px-3 sombra" type="text" id="usuario" name="usuario">
                     </div>
                     <div class="my-3 d-flex flex-column justify-content-center">
                         <!-- Tem que colocar &nbsp; porque só 'Email' não é suficiente pra preencher a linha toda -->
                         <label class="mx-2" for="email">Email &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
-                        <input class="border rounded-pill px-3 sombra" type="email" id="email" name="email">
+                        <input required class="border rounded-pill px-3 sombra" type="email" id="email" name="email">
                     </div>
                     <div class="my-3 d-flex flex-column justify-content-center">
                         <label class="mx-2" for="senha">Crie uma senha</label>
-                        <input class="border rounded-pill px-3 sombra" type="password" id="senha" name="senha">
+                        <input required class="border rounded-pill px-3 sombra" type="password" id="senha" name="senha">
                     </div>
                     <div class="my-3 d-flex flex-column justify-content-center">
                         <label class="mx-2" for="senha-confirmar">Confirme a senha</label>
-                        <input class="border rounded-pill px-3 sombra" type="password" id="senha-confirmar"
+                        <input required class="border rounded-pill px-3 sombra" type="password" id="senha-confirmar"
                             name="senha-confirmar">
                     </div>
                 </div>
