--- a/templates/login.html
+++ b/templates/login.html
@@ -3,12 +3,14 @@
 {% block children %}
 
 <!-- Modal de boas vindas -->
-<div class="modal fade" id="modal-bem-vindo" tabindex="-1" aria-labelledby="modal-bem-vindo" aria-hidden="true">
+<div class="modal fade p-0" id="modal-bem-vindo" tabindex="-1" aria-labelledby="modal-bem-vindo" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content py-5">
             <div class="modal-header">
                 <div class="w-100 d-flex flex-column justify-content-center align-items-center">
-                    <div>logo</div>
+                    <div class="d-flex justify-content-center align-items-center">
+                        <img style="max-width: 35%; height: auto;" src="{{ url_for('static', filename='/images/logo.png') }}" alt="Logo CineMaps">
+                    </div>
                     <h1 class="fs-3">Bem vindo ao CineMaps</h1>
                 </div>
             </div>
@@ -31,7 +33,9 @@
         <div class="modal-content py-5">
             <div class="modal-header">
                 <div class="w-100 d-flex flex-column justify-content-center align-items-center">
-                    <div>logo</div>
+                    <div>
+                        <img class="mh-100" style="max-width: 75%;" src="{{ url_for('static', filename='/images/logo.png') }}" alt="Logo CineMaps">
+                    </div>
                     <h1 class="fs-3">Bem vindo ao CineMaps</h1>
                 </div>
             </div>
