consertar formatação de ícone de perfil

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -116,7 +116,7 @@
         </div>
 
         <button
-          class="col-md-2 col-sm-2 border-0 bg-transparent"
+          class="col-1 border-0 bg-transparent"
           type="button"
           data-bs-toggle="modal"
           data-bs-target="#modal-perfil"
