consertar formatação da barra de pesquisa

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -77,12 +77,12 @@
     {% block info_mapa %}
       <!-- Componente de Pesquisa -->
       <div
-        class="bg-white container container-sm d-flex justify-content-between align-items-center rounded-pill p-2 position-absolute top-0 start-50 translate-middle my-5"
+        class="bg-white d-flex justify-content-between align-items-center rounded-pill p-2 position-absolute top-0 start-50 translate-middle my-5"
         style="z-index: 1"
       >
-        <div class="d-flex align-items-center col-md-11 col-sm-11">
+        <div class="d-flex align-items-center">
           <button
-            class="col-md-1 col-sm-1 border-0 bg-transparent h-100"
+            class="col-2 border-0 bg-transparent h-100"
             type="button"
             aria-controls="menu-lateral"
             data-bs-toggle="offcanvas"
@@ -116,7 +116,7 @@
         </div>
 
         <button
-          class="col-1 border-0 bg-transparent"
+          class="border-0 bg-transparent"
           type="button"
           data-bs-toggle="modal"
           data-bs-target="#modal-perfil"
