adicionar logo para tela de cadastro

--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -6,7 +6,7 @@
 
 <main>
     <div class="d-flex align-items-center justify-content-center" style="height: 15dvh;">
-        LOGO
+        <img class="w-75 m-auto" src="{{ url_for('static', filename='images/logo-letreiro.png') }}" alt="">        
     </div>
     <div class="bg-warning rounded-top-5 position-absolute vw-100 py-3 px-5"
         style="min-height: 85dvh; bottom: 0; left: 0; right: 0;">
