--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -13,7 +13,7 @@
         <div class="d-flex justify-content-center align-items-center py-4 text-white">
             <h1>Fazer cadastro</h1>
         </div>
-        <form action="" class="d-flex flex-column justify-content-center align-items-center">
+        <form action="/cadastro" method="post" class="d-flex flex-column justify-content-center align-items-center">
             <div class="h-75 py-3 border-top border-bottom">
                 <div class="d-flex justify-content-center">
                     <div class="w-50 h-25">
