--- a/templates/login.html
+++ b/templates/login.html
@@ -41,7 +41,7 @@
             </div>
 
             <div class="modal-body">
-                <form action="" class="d-flex flex-column align-items-center justify-content-center">
+                <form action="/login" method="post" class="d-flex flex-column align-items-center justify-content-center">
                     <div class="mb-3">
                         <label for="email" class="form-label w-100 text-danger">Email:</label>
                         <input required class="border border-2 rounded-pill px-3" type="email" id="email" name="email">
