arrumar lógica de sessão e criar rota para debug de sessão

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -180,8 +180,8 @@
                   </div>
                 </div>
                 <div class="col-7 d-flex justify-content-center flex-column">
-                  <h3 class="fw-bold m-0">NOME</h3>
-                  <p class="fw-bold m-0">exemplo@gmail.com</p>
+                  <h3 class="fw-bold m-0">{{ session['usuario'] }}</h3>
+                  <p class="fw-bold m-0">{{ session['email'] }}</p>
                 </div>
               </div>
 
