--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -42,7 +42,7 @@
                 <div class="d-flex flex-column align-items-center justify-content-center">
                     <div class="my-3 d-flex flex-column justify-content-center">
                         <label class="mx-2" for="usuario">Nome de usuário</label>
-                        <input required class="border rounded-pill px-3 sombra" type="text" id="usuario" name="usuario">
+                        <input maxlength="16" required class="border rounded-pill px-3 sombra" type="text" id="usuario" name="usuario">
                     </div>
                     <div class="my-3 d-flex flex-column justify-content-center">
                         <!-- Tem que colocar &nbsp; porque só 'Email' não é suficiente pra preencher a linha toda -->
