--- a/templates/layout.html
+++ b/templates/layout.html
@@ -180,7 +180,7 @@
                   </div>
                 </div>
                 <div class="col-7 d-flex justify-content-center flex-column">
-                  <h3 class="fw-bold m-0">{{ session['usuario'] }}</h3>
+                  <h3 class="fw-bold m-0">@{{ session['usuario'] }}</h3>
                   <p class="fw-bold m-0">{{ session['email'] }}</p>
                 </div>
               </div>
