adicionar template de mensagens de alerta e erro

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -70,6 +70,25 @@
     <script src="https://unpkg.com/maplibre-gl@4.7.1/dist/maplibre-gl.js"></script>
   </head>
   <body>
+    <!-- Obtém as mensagens criadas com o metodo 'flash' e exibe -->
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        {% for message in messages %}
+          <div style="z-index: 20;" class="alert alert-success alert-dismissible fade show position-absolute bottom-0 start-50 translate-middle-x" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
+
+    {% if erro %}
+      <div style="z-index: 20;" class="alert alert-{{ tipo_erro }} alert-dismissible fade show position-absolute bottom-0 start-50 translate-middle-x" role="alert">
+        {{ erro }}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+    {% endif %}
+
     {% block info_mapa %}
       <!-- Componente de Pesquisa -->
       <div
