mudar posição de controle de localização para evitar sobreposição

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -326,8 +326,9 @@
               positionOptions: {
                   enableHighAccuracy: true
               },
-              trackUserLocation: true
-          })
+              trackUserLocation: true,
+            }),
+          'bottom-left'
       );
     </script>
   </body>
