adicionar rota para sair da conta

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -217,6 +217,7 @@
                 <li><a class="text-decoration-none" style="color: currentColor" href="#">Alterar nome de usuário</a></li>
                 <li><a class="text-decoration-none" style="color: currentColor" href="#">Alterar email</a></li>
                 <li><a class="text-decoration-none" style="color: currentColor" href="#">Alterar senha</a></li>
+                <li><a class="text-decoration-none" style="color: currentColor" href="/sair">Sair</a></li>
                 <li><a class="text-decoration-none" style="color: currentColor" href="#">Excluir conta</a></li>
               </ul>
             </div>
