esconder configurações de usuário para não logados

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -190,6 +190,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <div class="d-flex">
+                {% if session %}
                 <div class="col-5">
                   <div class="col-6 m-auto">
                     <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
@@ -198,10 +199,16 @@
                     </svg>
                   </div>
                 </div>
-                <div class="col-7 d-flex justify-content-center flex-column">
-                  <h3 class="fw-bold m-0">@{{ session['usuario'] }}</h3>
-                  <p class="fw-bold m-0">{{ session['email'] }}</p>
-                </div>
+                  <div class="col-7 d-flex justify-content-center flex-column">
+                    <h3 class="fw-bold m-0">@{{ session['usuario'] }}</h3>
+                    <p class="fw-bold m-0">{{ session['email'] }}</p>
+                  </div>
+                {% else %}
+                  <div class="col-7 d-flex justify-content-center flex-column">
+                    <p class="m-0">Entre ou crie uma conta para acessar essas funções!</p>
+                    <p class="m-0"><a href="/cadastro">Criar conta</a></p>
+                  </div>
+                {% endif %}
               </div>
 
               <button
@@ -213,13 +220,23 @@
             </div>
 
             <div class="modal-body">
-              <ul class="list-group d-flex flex-column list-unstyled fs-5">
-                <li><a class="text-decoration-none" style="color: currentColor" href="#">Alterar nome de usuário</a></li>
-                <li><a class="text-decoration-none" style="color: currentColor" href="#">Alterar email</a></li>
-                <li><a class="text-decoration-none" style="color: currentColor" href="#">Alterar senha</a></li>
-                <li><a class="text-decoration-none" style="color: currentColor" href="/sair">Sair</a></li>
-                <li><a class="text-decoration-none" style="color: currentColor" href="#">Excluir conta</a></li>
-              </ul>
+              {% if session %}
+                <ul class="list-group d-flex flex-column list-unstyled fs-5">
+                  <li><a class="text-decoration-none" style="color: currentColor" href="#">Alterar nome de usuário</a></li>
+                  <li><a class="text-decoration-none" style="color: currentColor" href="#">Alterar email</a></li>
+                  <li><a class="text-decoration-none" style="color: currentColor" href="#">Alterar senha</a></li>
+                  <li><a class="text-decoration-none" style="color: currentColor" href="/sair">Sair</a></li>
+                  <li><a class="text-decoration-none" style="color: currentColor" href="#">Excluir conta</a></li>
+                </ul>
+              {% else %}
+                <ul style="filter: blur(3px);" class="list-group d-flex flex-column list-unstyled fs-5">
+                  <li><a class="btn border-0 disabled text-decoration-none" style="color: currentColor" href="#">Alterar nome de usuário</a></li>
+                  <li><a class="btn border-0 disabled text-decoration-none" style="color: currentColor" href="#">Alterar email</a></li>
+                  <li><a class="btn border-0 disabled text-decoration-none" style="color: currentColor" href="#">Alterar senha</a></li>
+                  <li><a class="btn border-0 disabled text-decoration-none" style="color: currentColor" href="/sair">Sair</a></li>
+                  <li><a class="btn border-0 disabled text-decoration-none" style="color: currentColor" href="#">Excluir conta</a></li>
+                </ul>
+              {% endif %}
             </div>
           </div>
         </div>
