--- a/templates/login.html
+++ b/templates/login.html
@@ -33,8 +33,8 @@
         <div class="modal-content py-5">
             <div class="modal-header">
                 <div class="w-100 d-flex flex-column justify-content-center align-items-center">
-                    <div>
-                        <img class="mh-100" style="max-width: 75%;" src="{{ url_for('static', filename='/images/logo.png') }}" alt="Logo CineMaps">
+                    <div class="px-5">
+                        <img style="max-width: 100%; max-height: 100%;" src="{{ url_for('static', filename='/images/logo.png') }}" alt="Logo CineMaps">
                     </div>
                     <h1 class="fs-3">Bem vindo ao CineMaps</h1>
                 </div>
