adicionar link para login

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -206,7 +206,7 @@
                 {% else %}
                   <div class="col-7 d-flex justify-content-center flex-column">
                     <p class="m-0">Entre ou crie uma conta para acessar essas funções!</p>
-                    <p class="m-0"><a href="/cadastro">Criar conta</a></p>
+                    <p class="m-0"><a href="/cadastro">Criar conta</a> ou <a href="/login">inicie sua sessão.</a></p>
                   </div>
                 {% endif %}
               </div>
