--- a/templates/layout.html
+++ b/templates/layout.html
@@ -189,22 +189,20 @@
         <div class="modal-dialog modal-dialog-centered mh-5">
           <div class="modal-content">
             <div class="modal-header">
-              <div class="d-flex">
+              <div class="d-flex p-3">
                 {% if session %}
-                <div class="col-5">
-                  <div class="col-6 m-auto">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-                      <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
-                      <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
-                    </svg>
-                  </div>
+                <div class="flex-grow-1 px-4">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                    <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+                  </svg>
                 </div>
                   <div class="col-7 d-flex justify-content-center flex-column">
                     <h3 class="fw-bold m-0">@{{ session['usuario'] }}</h3>
                     <p class="fw-bold m-0">{{ session['email'] }}</p>
                   </div>
                 {% else %}
-                  <div class="col-7 d-flex justify-content-center flex-column">
+                  <div class="flex-grow-1 col-7 d-flex justify-content-center flex-column">
                     <p class="m-0">Entre ou crie uma conta para acessar essas funções!</p>
                     <p class="m-0"><a href="/cadastro">Criar conta</a> ou <a href="/login">inicie sua sessão.</a></p>
                   </div>
