--- a/templates/cinema.html
+++ b/templates/cinema.html
@@ -1,10 +1,10 @@
 {% extends "layout.html" %} {% block children %}
 
-<div class="offcanvas offcanvas-bottom h-75" id="cinema{{ cinema }}">
+<div class="offcanvas offcanvas-bottom h-75" id="cinema{{ cinema.id_cinema }}">
     <div class="offcanvas-header justify-content-between">
         <div class="col-6">
-            <h2 class="fs-1 offcanvas-title">CINEMA {{ cinema }} </h2>
-            <p class="fs-5">rua x, n° - bairro</p>
+            <h2 class="fs-1 offcanvas-title">{{ cinema.nome }}</h2>
+            <p class="fs-5">Perto de {{ cinema.latitude }}, {{ cinema.longitude }}</p>
         </div>
         <div class="d-flex justify-content-between col-5">
             <button class="d-flex justify-content-between align-items-center btn p-3 fs-2 border border-dark border-3 rounded-circle" style="width: 40%;">
@@ -26,7 +26,7 @@
                 <p class="fs-1">
                     ★★★★★ 4,8
                 </p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil laudantium consequatur, eos impedit sapiente fugiat!</p>
+                <p>{{ cinema.descricao }}</p>
             </div>
             <div class="col-md-2 col-sm-3 d-flex flex-row-reverse">
                 <button class="d-flex justify-content-between align-items-center btn p-3 border border-dark border-3 rounded-circle mx-auto" style="width: 50%; height: auto;">
@@ -78,7 +78,7 @@
 
 <script type="module">
     // Obtém o offcanvas e abre ele
-    var offCanvas = document.getElementById('cinema{{ cinema }}')
+    var offCanvas = document.getElementById('cinema{{ cinema.id_cinema }}')
     var bsOffCanvas = new bootstrap.Offcanvas(offCanvas);
 
     bsOffCanvas.show()
