--- a/templates/cinema.html
+++ b/templates/cinema.html
@@ -3,8 +3,8 @@
 <div class="offcanvas offcanvas-bottom h-75" id="cinema{{ cinema.id_cinema }}">
     <div class="offcanvas-header justify-content-between">
         <div class="col-6">
-            <h2 class="fs-1 offcanvas-title">{{ cinema.nome }}</h2>
-            <p class="fs-5">Perto de {{ cinema.latitude }}, {{ cinema.longitude }}</p>
+            <h2 class="fs-2 offcanvas-title">{{ cinema.nome }}</h2>
+            <p class="fs-6">Perto de {{ cinema.latitude }}, {{ cinema.longitude }}</p>
         </div>
         <div class="d-flex justify-content-between col-5">
             <button class="d-flex justify-content-between align-items-center btn p-3 fs-2 border border-dark border-3 rounded-circle" style="width: 40%;">
@@ -22,14 +22,14 @@
     <div class="offcanvas-body p-0">
         <img class="img-fluid mx-auto d-block" src="https://placehold.co/800x400/png" alt="imagem">
         <div class="p-3 border-bottom d-flex flex-row justify-content-between align-items-center">
-            <div class="col-md-7 col-sm-8">
+            <div class="flex-grow-1 col-8">
                 <p class="fs-1">
                     ★★★★★ 4,8
                 </p>
                 <p>{{ cinema.descricao }}</p>
             </div>
-            <div class="col-md-2 col-sm-3 d-flex flex-row-reverse">
-                <button class="d-flex justify-content-between align-items-center btn p-3 border border-dark border-3 rounded-circle mx-auto" style="width: 50%; height: auto;">
+            <div class="d-flex flex-row-reverse">
+                <button class="d-flex justify-content-between align-items-center btn p-3 border border-dark border-3 rounded-circle" style="width: 50%; height: auto;">
                     <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="currentColor" class="bi bi-share" viewBox="0 0 16 16">
                         <path d="M13.5 1a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3M11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.5 2.5 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5m-8.5 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3m11 5.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3"/>
                     </svg>
