--- a/templates/cinema.html
+++ b/templates/cinema.html
@@ -27,6 +27,7 @@
                     ★★★★★ 4,8
                 </p>
                 <p>{{ cinema.descricao }}</p>
+                <p><a href="https://www.google.com/maps/place/@{{ cinema.latitude }},{{ cinema.longitude }},18z">Abrir no Google Maps</a></p>
             </div>
             <div class="d-flex flex-row-reverse">
                 <button class="d-flex justify-content-between align-items-center btn p-3 border border-dark border-3 rounded-circle" style="width: 50%; height: auto;">
