adicionar bloco para redefinição de zoom e aplicar em página de cinema

--- a/templates/cinema.html
+++ b/templates/cinema.html
@@ -77,6 +77,9 @@
     </div>
 </div>
 
+<!-- Redefinição de zoom -->
+{% block zoom %}15{% endblock %}
+
 <!-- Redefinição do centro do mapa para centralizar no mapa -->
 {% block longitude_mapa %} {{ cinema.longitude }} {% endblock %}{% block latitude_mapa %} {{ cinema.latitude }} {% endblock %}
 
