--- a/templates/cinema.html
+++ b/templates/cinema.html
@@ -30,11 +30,11 @@
                 <p><a href="https://www.google.com/maps/place/@{{ cinema.latitude }},{{ cinema.longitude }},18z">Abrir no Google Maps</a></p>
             </div>
             <div class="d-flex flex-row-reverse">
-                <button class="d-flex justify-content-between align-items-center btn p-3 border border-dark border-3 rounded-circle" style="width: 50%; height: auto;">
+                <a href="{{ request.url }}" class="d-flex justify-content-between align-items-center btn p-3 border border-dark border-3 rounded-circle" style="width: 50%; height: auto;">
                     <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="currentColor" class="bi bi-share" viewBox="0 0 16 16">
                         <path d="M13.5 1a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3M11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.5 2.5 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5m-8.5 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3m11 5.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3"/>
                     </svg>
-                </button>
+                </a>
             </div>
         </div>
         <div class="p-3">
