--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -61,7 +61,7 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center align-items-center gap-2 my-3">
-                <a href="/" class="btn border-2 border-danger text-danger fw-bold">Cancelar</a>
+                <a href="{{ url_for('index') }}" class="btn border-2 border-danger text-danger fw-bold">Voltar</a>
                 <button type="submit" class="btn btn-danger fw-bold fs-6">Enviar</button>
             </div>
         </form>
