--- a/templates/layout.html
+++ b/templates/layout.html
@@ -89,6 +89,30 @@
       </div>
     {% endif %}
 
+    {% block menu_lateral %}
+      <!-- Menu Lateral -->
+      <div
+        class="offcanvas offcanvas-start"
+        style="width: 75dvw"
+        tabindex="-1"
+        id="menu-lateral"
+        aria-labelledby="menu-lateral"
+      >
+        <div class="offcanvas-header border-1 border-bottom m-3 p-6">
+          <img class="mh-100" style="max-width: 75%;" src="{{ url_for('static', filename='/images/logo-letreiro.png') }}" alt="Logo CineMaps">
+        </div>
+        <div class="offcanvas-body">
+          <ul class="list-group list-unstyled fs-3 px-3 gap-4">
+              <li><a href="#" style="color: currentColor;" class="text-decoration-none">Salvos</a></li>
+              <li><a href="#" style="color: currentColor;" class="text-decoration-none">Histórico</a></li>
+              <li><a href="#" style="color: currentColor;" class="text-decoration-none">Configurações</a></li>
+              <li><a href="#" style="color: currentColor;" class="text-decoration-none">Ajuda</a></li>
+              <li><a href="#" style="color: currentColor;" class="text-decoration-none">Sair</a></li>
+          </ul>
+        </div>
+      </div>
+    {% endblock %}
+
     {% block info_mapa %}
       <!-- Componente de Pesquisa -->
       <div
@@ -155,28 +179,6 @@
       <main>
         <div style="min-height: 100dvh; width: auto" id="map"></div>
       </main>
-
-      <!-- Menu Lateral -->
-      <div
-        class="offcanvas offcanvas-start"
-        style="width: 75dvw"
-        tabindex="-1"
-        id="menu-lateral"
-        aria-labelledby="menu-lateral"
-      >
-        <div class="offcanvas-header border-1 border-bottom m-3 p-6">
-          <img class="mh-100" style="max-width: 75%;" src="{{ url_for('static', filename='/images/logo-letreiro.png') }}" alt="Logo CineMaps">
-        </div>
-        <div class="offcanvas-body">
-          <ul class="list-group list-unstyled fs-3 px-3 gap-4">
-              <li><a href="#" style="color: currentColor;" class="text-decoration-none">Salvos</a></li>
-              <li><a href="#" style="color: currentColor;" class="text-decoration-none">Histórico</a></li>
-              <li><a href="#" style="color: currentColor;" class="text-decoration-none">Configurações</a></li>
-              <li><a href="#" style="color: currentColor;" class="text-decoration-none">Ajuda</a></li>
-              <li><a href="#" style="color: currentColor;" class="text-decoration-none">Sair</a></li>
-          </ul>
-        </div>
-      </div>
 
       <!-- Modal -->
       <div
