--- a/templates/cinemas.html
+++ b/templates/cinemas.html
@@ -28,7 +28,7 @@
       </svg>
     </button>
 
-    <h1 class="m-0">Cinemas</h1>
+    <h1 class="m-0">Cinemas pertos de você</h1>
   </div>
 
   <ul class="py-4 px-0 m-0">
