--- a/templates/layout.html
+++ b/templates/layout.html
@@ -142,6 +142,7 @@
             </svg>
           </button>
           <form
+            action="{{ url_for('cinemas') }}"
             class="d-flex align-items-center justify-content-center border-0 bg-transparent fs-4"
           >
             <input
