alterar nome e id de input

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -148,8 +148,8 @@
             <input
               class="bg-transparent border-0"
               type="text"
-              id="pesquisar"
-              name="pesquisar"
+              id="cinema"
+              name="cinema"
               placeholder="Pesquisar..."
             />
           </form>
