adicionar roteamento à página principal para logo

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -98,9 +98,9 @@
         id="menu-lateral"
         aria-labelledby="menu-lateral"
       >
-        <div class="offcanvas-header border-1 border-bottom m-3 p-6">
+        <a href="/" class="offcanvas-header border-1 border-bottom m-3 p-6">
           <img class="mh-100" style="max-width: 75%;" src="{{ url_for('static', filename='/images/logo-letreiro.png') }}" alt="Logo CineMaps">
-        </div>
+        </a>
         <div class="offcanvas-body">
           <ul class="list-group list-unstyled fs-3 px-3 gap-4">
               <li><a href="#" style="color: currentColor;" class="text-decoration-none">Salvos</a></li>
