--- a/templates/cinema.html
+++ b/templates/cinema.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %} {% block children %}
 
-<div class="offcanvas offcanvas-bottom h-75" id="cinema{{ cinema.id_cinema }}">
+<div style="width: 500px;" class="offcanvas offcanvas-bottom h-75 mx-auto rounded-top" id="cinema{{ cinema.id_cinema }}">
     <div class="offcanvas-header justify-content-between">
         <div class="col-6">
             <h2 class="fs-2 offcanvas-title">{{ cinema.nome }}</h2>
