--- a/templates/layout.html
+++ b/templates/layout.html
@@ -93,7 +93,7 @@
       <!-- Menu Lateral -->
       <div
         class="offcanvas offcanvas-start"
-        style="width: 75dvw"
+        style="width: 75dvw; max-width: 450px;"
         tabindex="-1"
         id="menu-lateral"
         aria-labelledby="menu-lateral"
