--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,6 +8,7 @@
     <!-- Lora Typefont -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/Logos_CineMaps-removebg-preview.ico') }}">
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
     <style>
       body {
