adicionar link para página de cadastro

--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
 
             <div class="modal-body">
                 <div class="d-flex flex-row align-items-center justify-content-center gap-3">
-                    <button class="btn btn-danger">Cadastrar-se</button>
+                    <a href="/cadastro" class="btn btn-danger">Cadastrar-se</a>
                     <button data-bs-target="#modal-login" data-bs-toggle="modal" class="btn">
                         Fazer login
                     </button>
