adicionar rota de cinemas para menu lateral

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -104,6 +104,7 @@
         </a>
         <div class="offcanvas-body">
           <ul class="list-group list-unstyled fs-3 px-3 gap-4">
+              <li><a href="{{ url_for('cinemas') }}" style="color: currentColor;" class="text-decoration-none">Cinemas</a></li>
               <li><a href="#" style="color: currentColor;" class="text-decoration-none">Salvos</a></li>
               <li><a href="#" style="color: currentColor;" class="text-decoration-none">Histórico</a></li>
               <li><a href="#" style="color: currentColor;" class="text-decoration-none">Configurações</a></li>
